--- a/.env
+++ b/.env
@@ -5,3 +5,4 @@ SA_CLIENT_ID=<Your Service Account Access Credentials - ID>
 SA_CLIENT_SECRET=<Your Service Account Access Credentials - Secret>
 PATH_TO_VGS_CA=<Path to TLS Certificate, e.g. sandbox.pem>
 ADYEN_TOKEN=<Adyen Token>
+MERCHANT_ACCOUNT=<your VGS merchant account>
